--- a/Assets/style.css
+++ b/Assets/style.css
@@ -7,10 +7,11 @@ body {
 textarea {
   background: transparent;
   border: none;
-  resize: none;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  height: 80px;
+  width: 100%;
 }
 
 .jumbotron {
@@ -28,12 +29,18 @@ textarea {
 .time-block {
   text-align: center;
   border-radius: 15px;
+  height: 80px;
+  margin-right: 0px;
 }
 
 .row {
-  white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+}
+
+.col,
+.col-2 {
+  padding: 0px;
 }
 
 .hour {
