--- a/Assets/style.css
+++ b/Assets/style.css
@@ -70,6 +70,10 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  width: 50px;
+  height: 60px;
+  position: absolute;
+  top: 10px;
 }
 
 .saveBtn i:hover {
